<?xml version="1.0"?>
<package format="2">
  <name>lepton_thermal_sensor</name>
  <version>0.0.0</version>
  <description>Interface for FLIR Lepton Thermal Sensor </description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">moju zhao</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>camera_info_manager</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamic_reconfigure</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
